# picotemplate

./: .gitignore  pico_nim.nimble  readme.md
csource/: CMakeLists.txt
examples/: hello_resus.nim  lightsensor.nim  tinyusb.nim
src/: panicoverride.nim  pico_nim.nim
tests/: test1.nim
